dts: minnow: Enable low battery shutdown at 3.42 V
Configure MAX17050 fuel gague to report "0" SOC if and only if undervoltage
battery alert triggered.

Change-Id: I96c681b4ffd22e78004ac1a2ea9f539527fcc74f
Signed-off-by: Dmitriy Gruzman <dgruzman@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -151,6 +151,10 @@
 		gpio-names = "cc-alert";
 		interrupt-parent = <&gpio5>;
 		interrupts = <12 0>;		/* gpio-140 IRQ */
+		maxim,regs-init-data = <
+			0x01 0xffab /* VALRT, VMAX = 5.1 V and VMIN = 3.42 V */
+		>;
+		maxim,batt_undervoltage_zero_soc;
 	};
 };
 
