dts: minnow: Set CAM_HS (SYS_REST) to mode 7, pull-down
Kernel doesn't need to control this pin, but it needs to remain low
otherwise there can be a random restart

Change-Id: I7f0df1c76054cbe53c28dc6bd9b0a64e58b46961

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -170,6 +170,7 @@
 			0x0c0 0x004	/*  DSS_DATA10, MODE4 | OUTPUT */
 			0x0c2 0x004	/*  DSS_DATA11, MODE4 | OUTPUT */
 			0x0c6 0x004	/* DSS_DATA13, MODE4 | OUTPUT */
+			0x0dc 0x10f	/* CAM_HS, MODE7 | INPUT_PULLDOWN */
 			0x0ea 0x004	/* MUXCAM_D2, MODE4 | OUTPUT */
 			0x0e4 0x004	/* CAM_FLD, MODE4 | OUTPUT */
 			0x0e6 0x11c	/* CAM_D0, MODE4 | INPUT_PULLUP */
