ARM: dts: omap3-minnow: fix typo in mmc dt configuration
Fix typo in device tree configuration, so embedded MMC and WLAN SDIO
interfaces could be handled as non-removable.

Change-Id: I072f2fee467ab634181dcc1c91363f038e7e10b8
Signed-off-by: Andrey Gostev <fga022c@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -275,7 +275,7 @@
 
 /* internal */
 &mmc2 {
-	ti,non-removeable;
+	ti,non-removable;
 	bus-width = <8>;
 	vmmc-supply = <&ldo5_reg>;
 	vmmc_aux-supply = <&sw3_reg>;
