--- a/drivers/mtd/devices/Kconfig
+++ b/drivers/mtd/devices/Kconfig
@@ -102,6 +102,15 @@ config M25PXX_USE_FAST_READ
 	help
 	  This option enables FAST_READ access supported by ST M25Pxx.
 
+config M25PXX_M4SENSORHUB_CB
+	bool "Use M4 Sensor Hub call back to finish initialization"
+	depends on MTD_M25P80 && MFD_M4SENSORHUB
+	default y
+	help
+	  This option enables M4 Sensor Hub call back registration to finish
+	  initialization. This is needed if there is a dependency on M4 by
+	  the device, such as a regulator which is being controlled by M4.
+
 config MTD_SPEAR_SMI
 	tristate "SPEAR MTD NOR Support through SMI controller"
 	depends on PLAT_SPEAR
