--- a/arch/arm/configs/eng_minnow_defconfig
+++ b/arch/arm/configs/eng_minnow_defconfig
@@ -888,6 +888,7 @@ CONFIG_MTD_CFI_I2=y
 # CONFIG_MTD_DATAFLASH is not set
 CONFIG_MTD_M25P80=y
 # CONFIG_M25PXX_USE_FAST_READ is not set
+CONFIG_M25PXX_M4SENSORHUB_CB=y
 # CONFIG_MTD_SST25L is not set
 # CONFIG_MTD_SLRAM is not set
 # CONFIG_MTD_PHRAM is not set
