--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -129,7 +129,8 @@
 	spi_flash: m25p80@0 {
 		compatible = "w25q80";
 		reg = <0>; /* CS 0 */
-		spi-max-frequency = <2000000>;
+		spi-max-frequency = <24000000>;
+		m25p,fast-read;
 	};
 };
 
