Initial TI SGX Android OpenGL support
Added Makefile/Kconfig for kernel build-in driver
Added OMAP3630 support for TI SGX DDK
Fixed issue about newer kernel 3.10

Change-Id: I8b415bacb784e9dfb1967f669476d6d63898f331

--- a/arch/arm/configs/eng_minnow_defconfig
+++ b/arch/arm/configs/eng_minnow_defconfig
@@ -464,7 +464,7 @@ CONFIG_ATAGS=y
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
 # CONFIG_ARM_APPENDED_DTB is not set
-CONFIG_CMDLINE="rootwait earlyprintk console=ttyO2,115200n8 mem=128M@0x80000000 init=/init omapfb.vram=0:1M"
+CONFIG_CMDLINE="rootwait earlyprintk console=ttyO2,115200n8 mem=128M@0x80000000 init=/init omapfb.vram=0:1200K"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 # CONFIG_CMDLINE_EXTEND is not set
 CONFIG_CMDLINE_FORCE=y
@@ -1578,6 +1578,10 @@ CONFIG_REGULATOR_CPCAP=y
 #
 # CONFIG_DRM is not set
 # CONFIG_TEGRA_HOST1X is not set
+CONFIG_SGX_OMAP3630=y
+CONFIG_SGX_BUILD_RELEASE=y
+# CONFIG_SGX_BUILD_DEBUG is not set
+# CONFIG_SGX_PDUMP is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
