defconfig: minnow: enable TI shared transport driver
Enable TI shared transport driver for communication with Bluetooth IC

Change-Id: I3814577ce7eb3eee629ca293c504d1c215babbef
Signed-off-by: Andrey Gostev <fga022c@motorola.com>

--- a/arch/arm/configs/eng_minnow_defconfig
+++ b/arch/arm/configs/eng_minnow_defconfig
@@ -981,8 +981,8 @@ CONFIG_MMI_FACTORY=y
 #
 # Texas Instruments shared transport line discipline
 #
-CONFIG_TI_ST=m
-# CONFIG_ST_HCI is not set
+CONFIG_TI_ST=y
+CONFIG_ST_HCI=y
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
 
