ARM: dts: omap3-minnow: fix max17050 rsense, add CONFIG init
The rsns-microohm expects a value in terms of microohms but the current
value is incorrectly set to 100. Correct this value to match value on
hardware.

Add CONFIG register to init sequence to make sure Tex bit is cleared.

Change-Id: I85e5cfb4f84e64c80e8288e5ed2454540f97e4c4
Signed-off-by: Mohsan Habibi <mohsan@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -146,7 +146,7 @@
 	max17050@36 {
 		compatible = "maxim,max17050";
 		reg = <0x36>;
-		maxim,rsns-microohm = <100>;
+		maxim,rsns-microohm = <10000>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&cc_alert_pin>;	/* gpio 140 pin */
 		gpios = <&gpio5 12 0x1>;	/* gpio-140, GPIOF_DIR_IN */
@@ -155,6 +155,7 @@
 		interrupts = <12 0>;		/* gpio-140 IRQ */
 		maxim,regs-init-data = <
 			0x01 0xffab /* VALRT, VMAX = 5.1 V and VMIN = 3.42 V */
+			0x1d 0x2250 /* CONFIG, Tex = 0, TS = Ten = ETHRM = 1 */
 		>;
 		maxim,batt_undervoltage_zero_soc;
 	};
