dts: remove casper and cleanup minnow
Remove casper DTS for deprecated hardware and cleanup minnow
deconfigs to put common elements in the parent DTSI

Change-Id: Ia2e244bd5c0caa2b287b78f4591d8ee980bbc3f3

--- a/arch/arm/configs/minnow_defconfig
+++ b/arch/arm/configs/minnow_defconfig
@@ -460,7 +460,7 @@ CONFIG_ALIGNMENT_TRAP=y
 #
 CONFIG_USE_OF=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE_NAMES="omap3-minnow-p0 omap3-casper-p1"
+CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE_NAMES="omap3-minnow-p0-p1a omap3-minnow-p1b+"
 CONFIG_ATAGS=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 CONFIG_ZBOOT_ROM_TEXT=0x0
