--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -11,19 +11,8 @@
 	model = "Motorola OMAP3 Platform";
 	compatible = "mot,omap3-minnow", "ti,omap3";
 
-	/* FIXME: this dummy regulator is only needed as
-	   a reference, but is enough to let devices
-	   reference something.  The regulator_get will
-	   fall back to a dummy regulator internally.
-	*/
 	regulators {
 		compatible = "simple-bus";
-
-		dummy: regulator-dummy {
-			compatible = "regulator-fixed";
-			regulator-name = "dummy";
-			regulator-always-on;
-		};
 
 		vmmc: gpio-regulator {
 			compatible = "regulator-fixed";
@@ -36,6 +25,92 @@
 			enable-active-high;
 		};
 
+	};
+
+	Display@0 {
+		compatible = "mot,minnow-panel-dsi-cm";
+		bridge-supply = <&ldo1_reg>;
+		panel-supply = <&ldo7_reg>;
+		/* 0: MINNOW_PANEL_CM_220X176
+		 * 1: MINNOW_PANEL_CM_220X220
+		 * 2: MINNOW_PANEL_CM_BRIDGE_320X320
+		 */
+		id_panel = <2>;
+		gpio_panel_reset = <&gpio1 14 0>;       /* RESET gpio-14 */
+		gpio_bridge_reset = <&gpio1 23 0>;      /* RESET gpio-23 */
+		gpio_clk_en = <&gpio6 17 0>;    /* RESET gpio-177 */
+		/* declare it if ext_te enable */
+		//gpio_te = <&gpio1 0 0>;       /* EXT_TE gpio-0 */
+		//pins = <0 1 2 3>;             /* DSI Pin config */
+		//esd_interval = <0>;           /* ESD_INTERVAL */
+		//pixel_clock = <4608>;         /* kHZ = 320*240*60/1000*/
+		/* 0: RGB888
+		 * 1: RGB666
+		 * 2: RGB666_PACKED
+		 * 3: RGB565
+		 */
+		//pixel_format = <1>;
+		//hs_clk = <90000000 150000000>;        /* min max*/
+		//lp_clk = <7000000 9000000>;   /* min max*/
+	};
+
+	c55-ctrl@0 {
+		compatible = "ti,c55-ctrl";
+		reg = <0 0>;
+		gpios = <&gpio3 12 1>, /* IRQ   gpio_ap_int gpio-076 */
+			<&gpio3 16 0>, /*  gpio_reset gpio-80*/
+			<&gpio3 17 2>; /* gpio_c55_int gpio-81*/
+		vddc-supply = <&ldo9_reg>;
+		vddldo-supply = <&ldo3_reg>;
+		pinctrl-names = "off", "on";
+		pinctrl-0 = <&c55_pins_off>;
+		pinctrl-1 = <&c55_pins_on>;
+	};
+
+	vib-gpio {
+		compatible = "mot,vib-gpio";
+		vib-gpio-supply = <&ldo6_reg>;
+	};
+
+	tusb_phy: tusb-usb@0 {
+		compatible = "ti,tusb-usb";
+		gpios = <&gpio5 14 0x1>,  /* IRQ gpio-142    GPIOF_DIR_IN */
+			<&gpio1 15 0x0>,  /* resetn gpio-15  GPIOF_DIR_OUT|GPIOF_INIT_LOW */
+			<&gpio1 16 0x0>,  /* cs gpio-16      GPIOF_DIR_OUT|GPIOF_INIT_LOW */
+			<&gpio1 27 0x2>;  /* cs gpio-27      GPIOF_DIR_OUT|GPIOF_INIT_HIGH */
+		gpio-names = "tusb-irq",
+			     "tusb-resetn",
+			     "tusb-cs",
+			     "tusb-csn";
+		reg = <0 0>;
+	};
+
+	/* Temporary enable factory-cable in device-tree
+	 * Should remove it when boot-reason is implemented in boot-loader
+	 */
+	chosen {
+		mmi,factory-cable;
+	};
+	factory_support {
+		compatible = "mmi,factory-support";
+
+		gpios = <&gpio6 22 0x0>; /*gpio-182 GPIOF_DIR_OUT|GPIOF_INIT_LOW */
+		gpio-names = "factory_kill_disable";
+	};
+
+	pmic-wdi@0 {
+		compatible = "mot,pmic-wdi";
+		gpios  = <&gpio5 15 0x0>, /* gpio-143 GPIOF_DIR_OUT|GPIOF_INIT_LOW */
+			 <&gpio3 30 0x0>; /* gpio-94  GPIOF_DIR_OUT|GPIOF_INIT_LOW */
+		gpio-names = "wdi",
+			     "sys_reset";
+		pinctrl-names = "output", "tristate";
+		pinctrl-0 = <&wdi_phy_gpio_mode>;
+		pinctrl-1 = <&wdi_phy_safe_mode>;
+	};
+
+	rtc_sensorhub@0 {
+		compatible = "mot,rtc_from_sensorhub";
 	};
 
 	m4sensor {
@@ -125,15 +200,6 @@
 	};
 };
 
-&mcspi2 {
-	spi_flash: m25p80@0 {
-		compatible = "w25q80";
-		reg = <0>; /* CS 0 */
-		spi-max-frequency = <24000000>;
-		m25p,fast-read;
-	};
-};
-
 &i2c3 {
 
 	clock-frequency = <400000>;
@@ -161,6 +227,162 @@
 	};
 };
 
+&mcspi1 {
+
+	tps65912 {
+
+		compatible = "ti,tps65912";
+		reg = <0>; /* CS 0 */
+		spi-max-frequency = <1000000>;
+		spi-cs-high;
+
+		dcdc1_avs;
+		dcdc4_avs;
+
+		tps_irq_gpio = <0>;
+
+		powerkey_up_irq = <10>;		/* TPS65912_IRQ_GPIO3_R the key down */
+		powerkey_down_irq = <11>;	/* TPS65912_IRQ_GPIO3_F the key up */
+		powerkey_code = <116>;		/* power key code for android*/
+
+		regulators {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			sw1_iva_reg: regulator@0 {
+				reg = <0>;
+				regulator-compatible = "DCDC1";
+				regulator-name = "DCDC1";
+				regulator-min-microvolt = <500000>;
+				regulator-max-microvolt = <1287500>;
+				regulator-boot-on;
+			};
+
+			sw2_reg: regulator@1 {
+				reg = <1>;
+				regulator-compatible = "DCDC2";
+				regulator-name = "DCDC2";
+				regulator-min-microvolt = <3000000>;
+				regulator-max-microvolt = <3000000>;
+				regulator-boot-on;
+				regulator-always-on;
+			};
+
+			sw3_reg: regulator@2 {
+				reg = <2>;
+				regulator-compatible = "DCDC3";
+				regulator-name = "DCDC3";
+				regulator-min-microvolt = <1875000>;
+				regulator-max-microvolt = <1875000>;
+				regulator-boot-on;
+				regulator-always-on;
+			};
+
+			sw4_core_reg: regulator@3 {
+				reg = <3>;
+				regulator-compatible = "DCDC4";
+				regulator-name = "DCDC4";
+				regulator-min-microvolt = <500000>;
+				regulator-max-microvolt = <1287500>;
+				regulator-boot-on;
+			};
+
+			ldo1_reg: regulator@4 {
+				reg = <4>;
+				regulator-compatible = "LDO1";
+				regulator-name = "LDO1";
+				regulator-min-microvolt = <1200000>;
+				regulator-max-microvolt = <1200000>;
+			};
+
+			ldo2_reg: regulator@5 {
+				reg = <5>;
+				regulator-compatible = "LDO2";
+				regulator-name = "LDO2";
+				regulator-min-microvolt = <1700000>;
+				regulator-max-microvolt = <1700000>;
+			};
+
+			ldo3_reg: regulator@6 {
+				reg = <6>;
+				regulator-compatible = "LDO3";
+				regulator-name = "LDO3";
+				regulator-min-microvolt = <2950000>;
+				regulator-max-microvolt = <2950000>;
+			};
+
+			ldo4_reg: regulator@7 {
+				reg = <7>;
+				regulator-compatible = "LDO4";
+				regulator-name = "LDO4";
+				regulator-min-microvolt = <1800000>;
+				regulator-max-microvolt = <1800000>;
+				regulator-always-on;
+			};
+
+			ldo5_reg: regulator@8 {
+				reg = <8>;
+				regulator-compatible = "LDO5";
+				regulator-name = "LDO5";
+				regulator-min-microvolt = <2800000>;
+				regulator-max-microvolt = <2800000>;
+			};
+
+			ldo6_reg: regulator@9 {
+				reg = <9>;
+				regulator-compatible = "LDO6";
+				regulator-name = "LDO6";
+				regulator-min-microvolt = <2300000>;
+				regulator-max-microvolt = <2300000>;
+			};
+
+			ldo7_reg: regulator@10 {
+				reg = <10>;
+				regulator-compatible = "LDO7";
+				regulator-name = "LDO7";
+				regulator-min-microvolt = <2850000>;
+				regulator-max-microvolt = <2850000>;
+			};
+
+			ldo8_reg: regulator@11 {
+				reg = <11>;
+				regulator-compatible = "LDO8";
+				regulator-name = "LDO8";
+				regulator-min-microvolt = <2800000>;
+				regulator-max-microvolt = <2800000>;
+				regulator-boot-on;
+				regulator-always-on;
+			};
+
+			ldo9_reg: regulator@12 {
+				reg = <12>;
+				regulator-compatible = "LDO9";
+				regulator-name = "LDO9";
+				regulator-min-microvolt = <1700000>;
+				regulator-max-microvolt = <1700000>;
+			};
+
+			ldo10_reg: regulator@13 {
+				reg = <13>;
+				regulator-compatible = "LDO10";
+				regulator-name = "LDO10";
+				regulator-min-microvolt = <2500000>;
+				regulator-max-microvolt = <2500000>;
+				regulator-always-on;
+			};
+		};
+	};
+};
+
+
+&mcspi2 {
+	spi_flash: m25p80@0 {
+		compatible = "w25q80";
+		reg = <0>; /* CS 0 */
+		spi-max-frequency = <24000000>;
+		m25p,fast-read;
+	};
+};
 
 &omap3_pmx_core {
 	pinctrl-names = "default";
@@ -228,9 +450,19 @@
 	};
 
 	audio_gpio_pins: pinmux_audio_gpio_pins {
+		pinctrl-single,pins = <
+			0x0ba 0x004	/* DSS_DATA7, MODE4 | OUTPUT */
+			0x0c8 0x004	/* DSS_DATA14, MODE4 | OUTPUT */
+		>;
 	};
 
 	usb_phy_pins: pinmux_usb_phy_pins {
+		pinctrl-single,pins = <
+			0x140 0x104     /* MCBSP3_CLKX, MODE4 (GPIO-142) | INPUT */
+			0x5ae 0x004     /* ETK_D1, MODE4 (GPIO_15) | OUTPUT */
+			0x5b0 0x004     /* ETK_D2, MODE4 (GPIO_16) | OUTPUT */
+			0x5c6 0x004     /* EDK_D13, MODE4 (GPIO_27) | OUTPUT */
+		>;
 	};
 
 	wdi_phy_gpio_mode: pinmux_wdi_phy_gpio_mode {
@@ -268,6 +500,7 @@
 			0x13c 0x11c	/* MCBSP3_DX, MODE4 | INPUT | INPUT_PULLUP */
 		>;
 	};
+
 };
 
 &omap3_pmx_wkup{
@@ -291,8 +524,8 @@
 &mmc2 {
 	ti,non-removable;
 	bus-width = <8>;
-	vmmc-supply = <&dummy>;
-	vmmc_aux-supply = <&dummy>;
+	vmmc-supply = <&ldo5_reg>;
+	vmmc_aux-supply = <&sw3_reg>;
 };
 
 /* wireless */
@@ -302,4 +535,12 @@
 	bus-width = <4>;
 	vmmc-supply = <&vmmc>;
 	wl_host_wake_gpio = <10>;
+};
+
+&usb_otg_hs {
+	interface-type = <0>;
+	usb-phy = <&tusb_phy>;
+	mode = <3>;
+	power = <50>;
+
 };
