minnow: remove support for CPCAP PMIC
Disable CPCAP drivers.  The old hardware with CPCAP PMIC has been deprecated.

Change-Id: I729b23fc9858ced14a2b43f63b61ab94b5f8a9ed

--- a/arch/arm/configs/minnow_defconfig
+++ b/arch/arm/configs/minnow_defconfig
@@ -1451,8 +1451,6 @@ CONFIG_BATTERY_MAX17042=y
 # CONFIG_CHARGER_BQ2415X is not set
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GOLDFISH is not set
-CONFIG_CHARGER_CPCAP=y
-CONFIG_BATTERY_CPCAP=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_RESTART is not set
@@ -1517,7 +1515,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_MAX8997 is not set
 # CONFIG_MFD_MAX8998 is not set
 # CONFIG_EZX_PCAP is not set
-CONFIG_MFD_CPCAP=y
+# CONFIG_MFD_CPCAP is not set
 # CONFIG_MFD_VIPERBOARD is not set
 # CONFIG_MFD_RETU is not set
 # CONFIG_MFD_PCF50633 is not set
@@ -1586,7 +1584,6 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_TPS6507X is not set
 # CONFIG_REGULATOR_TPS6524X is not set
 CONFIG_REGULATOR_TPS65912=y
-CONFIG_REGULATOR_CPCAP=y
 # CONFIG_MEDIA_SUPPORT is not set
 
 #
@@ -1908,7 +1905,7 @@ CONFIG_USB_OTG_WAKELOCK=y
 # CONFIG_USB_RCAR_PHY is not set
 # CONFIG_USB_ULPI is not set
 CONFIG_USB_TUSB=y
-CONFIG_CPCAP_USB=y
+# CONFIG_CPCAP_USB is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
