IIO based pressure sensor driver
Change-Id: I93bb302c26604a16ea2348fade9193fce45ece4d

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -117,7 +117,7 @@
 		compatible = "simple-bus";
 
 		pressure {
-			compatible = "mot,m4pressure";
+			compatible = "mot,m4sensorhub_pressure";
 		};
 		mpu9150 {
 			compatible = "mot,m4mpu9150";
