--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -54,7 +54,6 @@ obj-$(CONFIG_INTEL_MEI)		+= mei/
 obj-$(CONFIG_VMWARE_VMCI)	+= vmw_vmci/
 obj-$(CONFIG_LATTICE_ECP3_CONFIG)	+= lattice-ecp3-config.o
 obj-$(CONFIG_SRAM)		+= sram.o
-obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_bmp180.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_mpu9150.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_pedometer.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_gesture.o
@@ -64,6 +63,7 @@ obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_display.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_passive.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_als.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_heartrate.o
+obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_pressure.o
 obj-$(CONFIG_VIB_GPIO)          += vib-gpio.o
 obj-$(CONFIG_C55_CTRL) += c55_ctrl.o
 obj-$(CONFIG_MMI_FACTORY) += mmi-factory.o
