minnow: Disable linear regulator discharge
Disable the discharge pulldown resistor on linear regulators
LDO1, LDO2, LDO3, LDO5, LDO6, LDO7

Change-Id: Ib70c5b35450a93f830514ff50d91c1b69dad5db7

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -229,6 +229,10 @@
 		spi-max-frequency = <1000000>;
 		spi-cs-high;
 
+		register-init-data = <
+			0x2d 0x88 /* DISCHARGE1: Enable LDO4, LDO8 */
+		>;
+
 		dcdc1_avs;
 		dcdc4_avs;
 
