--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -228,9 +228,36 @@
 		interrupts = <12 0>;		/* gpio-140 IRQ */
 		maxim,regs-init-data = <
 			0x01 0xffab /* VALRT, VMAX = 5.1 V and VMIN = 3.42 V */
-			0x1d 0x2250 /* CONFIG, Tex = 0, TS = Ten = ETHRM = 1 */
 		>;
+		maxim,enable_por_init;
 		maxim,batt_undervoltage_zero_soc;
+		maxim,configuration {
+			config		= /bits/ 16 <0x2254>;	/* Tex = 0, TS = Ten = ETHRM = 1,  Aen = 1 */
+			full_soc_thresh	= /bits/ 16 <0x5F00>;	/* app note constant */
+			design_cap	= /bits/ 16 <320>;	/* mAh */
+			ichgt_term	= /bits/ 16 <0x0066>;	/* battery attribute */
+			learn_cfg	= /bits/ 16 <0x2606>;	/* app note constant */
+			filter_cfg	= /bits/ 16 <0x87A4>;	/* app note constant */
+			relax_cfg	= /bits/ 16 <0x203B>;	/* Load = 5 mA, dV = 3.7 mV, dT = 6 mins */
+			fullcap		= /bits/ 16 <320>;	/* mAh */
+			fullcapnom	= /bits/ 16 <320>;	/* mAh */
+			qrtbl00		= /bits/ 16 <0x1804>;	/* battery attribute */
+			qrtbl10		= /bits/ 16 <0x0B00>;	/* battery attribute */
+			qrtbl20		= /bits/ 16 <0x0700>;	/* battery attribute */
+			qrtbl30		= /bits/ 16 <0x0600>;	/* battery attribute */
+			rcomp0 		= /bits/ 16 <0x0051>;	/* battery attribute */
+			tcompc0		= /bits/ 16 <0x242E>;	/* battery attribute */
+			maxim,cell-char-tbl = /bits/ 16 <	/* battery attribute */
+				0x9FB0 0xB5E0 0xB800 0xBA00 0xBB10 0xBC30
+				0xBC90 0xBD00 0xBDA0 0xBE40 0xBFA0 0xC250
+				0xC4C0 0xC7B0 0xCB70 0xCDD0 0x0100 0x0F10
+				0x1000 0x1300 0x1200 0x3CE0 0x3470 0x1BF0
+				0x1B90 0x1800 0x0C60 0x0DE0 0x0C80 0x0BF0
+				0x0450 0x0450 0x0080 0x0080 0x0080 0x0080
+				0x0080 0x0080 0x0080 0x0080 0x0080 0x0080
+				0x0080 0x0080 0x0080 0x0080 0x0080 0x0080
+			>;
+		};
 	};
 };
 
