dts: minnow: remove voltage scaling
The cpu voltage domain is controlled by DCDC1 rather than
DCDC4.  Remove the voltage scaling until we are can reliably
scale voltage with DCDC1.

Change-Id: I2b3440ffed86545a9aaccdaa616b0e4e1ac0333c
Signed-off-by: James Wylder <jwylder@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -19,9 +19,10 @@
 				600000  1140000
 				800000  1270000
 			>;
-			cpu0-supply = <&sw4_core_reg>;
+			/* FIXME: voltage scaling on suspend resume */
+			/* cpu0-supply = <&sw1_iva_reg>; */
 			/* OPP tolerance in percentage */
-			voltage-tolerance = <4>;
+			/* voltage-tolerance = <1>; */
 		};
 	};
 
