--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -235,6 +235,7 @@
 		maxim,enable_por_init;
 		maxim,batt_undervoltage_zero_soc;
 		maxim,configuration {
+			/* Required properties */
 			config		= /bits/ 16 <0x2254>;	/* Tex = 0, TS = Ten = ETHRM = 1,  Aen = 1 */
 			full_soc_thresh	= /bits/ 16 <0x5F00>;	/* app note constant */
 			design_cap	= /bits/ 16 <320>;	/* mAh */
@@ -260,6 +261,9 @@
 				0x0080 0x0080 0x0080 0x0080 0x0080 0x0080
 				0x0080 0x0080 0x0080 0x0080 0x0080 0x0080
 			>;
+			/* Optional properties */
+			tgain		= /bits/ 16 <0xE71C>;	/* thermistor attribute */
+			toff		= /bits/ 16 <0x251A>;	/* thermistor attribute */
 		};
 	};
 };
