--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -14,17 +14,15 @@
 	cpus {
 		cpu@0 {
 			device_type = "cpu";
-			reg = <0>;
 			operating-points = <
 				/* kHz    uV */
-				300000   970000
-				600000  1140000
-				800000  1270000
+				300000   975000
+				600000  1150000
+				800000  1275000
 			>;
-			/* FIXME: voltage scaling on suspend resume */
-			/* cpu0-supply = <&sw1_iva_reg>; */
+			cpu0-supply = <&sw1_iva_reg>;
 			/* OPP tolerance in percentage */
-			/* voltage-tolerance = <1>; */
+			voltage-tolerance = <0>;
 		};
 	};
 
