--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -248,28 +248,28 @@
 			/* Required properties */
 			config		= /bits/ 16 <0x2254>;	/* Tex = 0, TS = Ten = ETHRM = 1,  Aen = 1 */
 			full_soc_thresh	= /bits/ 16 <0x5F00>;	/* app note constant */
-			design_cap	= /bits/ 16 <320>;	/* mAh */
+			design_cap	= /bits/ 16 <651>;	/* in 5uVh/Rsns = 0.5 mAh */
 			ichgt_term	= /bits/ 16 <0x0066>;	/* battery attribute */
 			learn_cfg	= /bits/ 16 <0x2606>;	/* app note constant */
 			filter_cfg	= /bits/ 16 <0x87A4>;	/* app note constant */
 			relax_cfg	= /bits/ 16 <0x203B>;	/* Load = 5 mA, dV = 3.7 mV, dT = 6 mins */
-			fullcap		= /bits/ 16 <320>;	/* mAh */
-			fullcapnom	= /bits/ 16 <320>;	/* mAh */
-			qrtbl00		= /bits/ 16 <0x1804>;	/* battery attribute */
-			qrtbl10		= /bits/ 16 <0x0B00>;	/* battery attribute */
-			qrtbl20		= /bits/ 16 <0x0700>;	/* battery attribute */
-			qrtbl30		= /bits/ 16 <0x0600>;	/* battery attribute */
-			rcomp0 		= /bits/ 16 <0x0051>;	/* battery attribute */
-			tcompc0		= /bits/ 16 <0x242E>;	/* battery attribute */
+			fullcap		= /bits/ 16 <651>;	/* in 5uVh/Rsns = 0.5 mAh */
+			fullcapnom	= /bits/ 16 <651>;	/* in 5uVh/Rsns = 0.5 mAh */
+			qrtbl00		= /bits/ 16 <0x1A06>;	/* battery attribute */
+			qrtbl10		= /bits/ 16 <0x0B06>;	/* battery attribute */
+			qrtbl20		= /bits/ 16 <0x040A>;	/* battery attribute */
+			qrtbl30		= /bits/ 16 <0x028A>;	/* battery attribute */
+			rcomp0 		= /bits/ 16 <0x0037>;	/* battery attribute */
+			tcompc0		= /bits/ 16 <0x1824>;	/* battery attribute */
 			maxim,cell-char-tbl = /bits/ 16 <	/* battery attribute */
-				0x9FB0 0xB5E0 0xB800 0xBA00 0xBB10 0xBC30
-				0xBC90 0xBD00 0xBDA0 0xBE40 0xBFA0 0xC250
-				0xC4C0 0xC7B0 0xCB70 0xCDD0 0x0100 0x0F10
-				0x1000 0x1300 0x1200 0x3CE0 0x3470 0x1BF0
-				0x1B90 0x1800 0x0C60 0x0DE0 0x0C80 0x0BF0
-				0x0450 0x0450 0x0080 0x0080 0x0080 0x0080
-				0x0080 0x0080 0x0080 0x0080 0x0080 0x0080
-				0x0080 0x0080 0x0080 0x0080 0x0080 0x0080
+				0x7D00 0xADE0 0xB7E0 0xB840 0xB9A0 0xBAF0
+				0xBC40 0xBDB0 0xBEC0 0xC1A0 0xC670 0xC730
+				0xC990 0xCD90 0xD1E0 0xD770 0x0020 0x0210
+				0x26C0 0x1270 0x0DF0 0x1500 0x1A20 0x1960
+				0x10F0 0x09F0 0x0EF0 0x0430 0x08C0 0x07F0
+				0x0670 0x0670 0x0100 0x0100 0x0100 0x0100
+				0x0100 0x0100 0x0100 0x0100 0x0100 0x0100
+				0x0100 0x0100 0x0100 0x0100 0x0100 0x0100
 			>;
 			/* Optional properties */
 			tgain		= /bits/ 16 <0xE71C>;	/* thermistor attribute */
