config: minnow: enable pstore
Change-Id: I9e06fd244efa4fa9e9e1717d46e767226aa06b53
Signed-off-by: Jim Wylder <jwylder1@motorola.com>

--- a/arch/arm/configs/minnow_defconfig
+++ b/arch/arm/configs/minnow_defconfig
@@ -2555,7 +2555,10 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_QNX4FS_FS is not set
 # CONFIG_QNX6FS_FS is not set
 # CONFIG_ROMFS_FS is not set
-# CONFIG_PSTORE is not set
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_RAM=y
+# CONFIG_ARCH_DISCARD_MEMBLOCK
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 # CONFIG_F2FS_FS is not set
