--- a/arch/arm/boot/dts/omap3.dtsi
+++ b/arch/arm/boot/dts/omap3.dtsi
@@ -523,5 +523,52 @@
 			num-eps = <16>;
 			ram-bits = <12>;
 		};
+
+		vc: vc@48307220 {
+			status = "disabled";
+			compatible = "ti,omap3-vc";
+			reg = <0x48307220 0x24>;
+			reg-names = "base-address";
+
+			vc_mpu: vc_mpu {
+				compatible = "ti,omap3-vc-channel-0";
+				ti,retention-micro-volts = <800000>;
+			};
+
+			vc_core: vc_core {
+				compatible = "ti,omap3-vc-channel-1";
+				ti,retention-micro-volts = <800000>;
+			};
+		};
+
+		vp_mpu: vp@483072b0 {
+			status = "disabled";
+			compatible = "ti,omap3-vp";
+
+			reg = <0x483072b0 0x18>, <0x48306818 0x4>;
+			reg-names = "base-address", "int-address";
+			ti,tranxdone-status-mask=<0x8000>;
+
+			ti,vc-channel = <&vc_mpu>;
+			ti,min-step-micro-volts = <10000>;
+			ti,max-step-micro-volts = <50000>;
+			ti,min-micro-volts = <800000>;
+			ti,max-micro-volts = <1330000>;
+		};
+
+		vp_core: vp@483072d0 {
+			status = "disabled";
+			compatible = "ti,omap3-vp";
+
+			reg = <0x483072d0 0x18>, <0x48306818 0x4>;
+			reg-names = "base-address", "int-address";
+			ti,tranxdone-status-mask=<0x200000>;
+
+			ti,vc-channel = <&vc_core>;
+			ti,min-step-micro-volts = <10000>;
+			ti,max-step-micro-volts = <50000>;
+			ti,min-micro-volts = <800000>;
+			ti,max-micro-volts = <1200000>;
+		};
 	};
 };
