config: minnow: Enable AVS and omap_pmic support
Change-Id: I3164dfffc4dfc53b884c13f9e17d82053c426d29
Signed-off-by: Vladimir Tsunaev <vladimirt@motorola.com>

--- a/arch/arm/configs/minnow_defconfig
+++ b/arch/arm/configs/minnow_defconfig
@@ -290,6 +290,7 @@ CONFIG_ARCH_MULTI_V6_V7=y
 #
 # OMAP Feature Selections
 #
+# CONFIG_POWER_AVS_OMAP is not set
 CONFIG_OMAP_RESET_CLOCKS=y
 CONFIG_OMAP_MUX=y
 CONFIG_OMAP_MUX_DEBUG=y
@@ -905,6 +906,7 @@ CONFIG_SOC_BUS=y
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
+CONFIG_REGMAP_MMIO=y
 # CONFIG_DMA_SHARED_BUFFER is not set
 # CONFIG_CMA is not set
 
@@ -1528,7 +1530,8 @@ CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_RESTART is not set
 CONFIG_POWER_RESET_MINNOW=y
-# CONFIG_POWER_AVS is not set
+CONFIG_POWER_AVS=y
+CONFIG_POWER_TI_HARDWARE_VOLTAGE_CONTROL=y
 # CONFIG_HWMON is not set
 # CONFIG_THERMAL is not set
 CONFIG_WATCHDOG=y
@@ -1657,6 +1660,7 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_TPS6507X is not set
 # CONFIG_REGULATOR_TPS6524X is not set
 CONFIG_REGULATOR_TPS65912=y
+CONFIG_REGULATOR_TI_OMAP_PMIC=y
 # CONFIG_MEDIA_SUPPORT is not set
 
 #
