dts: minnow: cpu0 set reset-voltage
Set voltage target for panic reset handling.

Change-Id: I3d7819fc743a76775df880f8ab206a14e920329a
Signed-off-by: Jim Wylder <jwylder1@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -23,6 +23,7 @@
 			cpu0-supply = <&sw1_iva_reg>;
 			/* OPP tolerance in percentage */
 			voltage-tolerance = <0>;
+			reset-voltage = <1275000>;
 		};
 	};
 
