--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -65,5 +65,7 @@ obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_als.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_heartrate.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_bmp180.o
 obj-$(CONFIG_VIB_GPIO)          += vib-gpio.o
-obj-$(CONFIG_C55_CTRL) += c55_ctrl.o
-obj-$(CONFIG_MMI_FACTORY) += mmi-factory.o
+obj-$(CONFIG_C55_CTRL)          += c55_ctrl.o
+obj-$(CONFIG_MMI_FACTORY)       += mmi-factory.o
+obj-$(CONFIG_MOT_UTAG)          += utag/
+
