--- a/arch/arm/configs/eng_minnow_defconfig
+++ b/arch/arm/configs/eng_minnow_defconfig
@@ -966,6 +966,7 @@ CONFIG_VIB_GPIO=y
 # CONFIG_SRAM is not set
 CONFIG_C55_CTRL=y
 CONFIG_MMI_FACTORY=y
+CONFIG_MOT_UTAG=y
 # CONFIG_C2PORT is not set
 
 #
