--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -558,6 +558,7 @@
 			0x5b6 0x11a	/* ETK_D5, MODE2 | INPUT_PULLUP */
 			0x5b8 0x11a	/* ETK_D6, MODE2 | INPUT_PULLUP */
 			0x5ba 0x004	/* ETK_D7, MODE4 | OUTPUT */
+			0x5bc 0x004	/* ETK_D8, MODE4 | OUTPUT */
 			0x5c0 0x004	/* ETK_D10, MODE4 | OUTPUT */
 			0x5c8 0x004	/* ETK_D14, MODE4 | OUTPUT */
 		>;
