dts: minnow: Report battery status to Android
Report battery status as charging whenever gpio-charger is online.

Change-Id: I00fd01087913c35f1eb36aed595066dbbd33878c
Signed-off-by: Dmitriy Gruzman <dgruzman@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -217,6 +217,7 @@
 		gpio = <&gpio6 16 0>;			/* gpio-176 */
 		charger-type = <8>;			/* POWER_SUPPLY_TYPE_WIRELESS */
 		charger-name = "wireless";
+		supplied_to = "max170xx_battery";
 	};
 };
 
