--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -68,3 +68,5 @@ obj-$(CONFIG_MOT_UTAG)          += utag/
 obj-$(CONFIG_BQ5105X_CTRL)      += bq5105x_ctrl.o
 obj-$(CONFIG_BQ5105X_DETECT)    += bq5105x_detect.o
 obj-$(CONFIG_WAKEUP_SOURCE_NOTIFY)	+= wakeup_source_notify.o
+obj-$(CONFIG_POWER_KEY_OVERRIDE)	+= charger_notify.o
+obj-$(CONFIG_POWER_KEY_OVERRIDE)	+= display_notify.o
