--- a/arch/arm/configs/minnow_defconfig
+++ b/arch/arm/configs/minnow_defconfig
@@ -1154,6 +1154,7 @@ CONFIG_MOT_UTAG=y
 CONFIG_BQ5105X_CTRL=y
 CONFIG_BQ5105X_DETECT=y
 CONFIG_WAKEUP_SOURCE_NOTIFY=y
+CONFIG_ALS_WHILE_CHARGING=y
 # CONFIG_C2PORT is not set
 
 #
